--- a/WhyDiffAlgorithm/pom.xml
+++ b/WhyDiffAlgorithm/pom.xml
@@ -12,19 +12,49 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<hibernate.version>4.0.1.Final</hibernate.version>
+		<postgresql.version>9.2-1003-jdbc4</postgresql.version>
 	</properties>
 
 	<dependencies>
-		<dependency>
+		<!-- dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency-->
 		<dependency>
 			<groupId>org.neo4j</groupId>
 			<artifactId>neo4j</artifactId>
 			<version>2.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.connexience</groupId>
+			<artifactId>server-common</artifactId>
+			<version>3.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>${hibernate.version}</version>
+		</dependency>
+		<!-- dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.5</version>
+		</dependency-->
+		<!-- The tutorials use the PostgreSQL 9.3.5 database -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>${postgresql.version}</version>
+		</dependency>
 	</dependencies>
+	<repositories>
+		<repository>
+			<id>escRepo</id>
+			<name>libs-release</name>
+			<url>http://esciencecentral.co.uk/artifactory/libs-release-local</url>
+		</repository>
+	</repositories>
 </project>
